requirements and polishing  - added requirements.txt  - removed useless reports  - fixed font size in crop.ui

--- a/ui/crop.ui
+++ b/ui/crop.ui
@@ -60,6 +60,13 @@
          <verstretch>0</verstretch>
         </sizepolicy>
        </property>
+       <property name="font">
+        <font>
+         <pointsize>12</pointsize>
+         <weight>50</weight>
+         <bold>false</bold>
+        </font>
+       </property>
        <property name="text">
         <string>IMAGE</string>
        </property>
@@ -72,6 +79,11 @@
       <layout class="QHBoxLayout" name="horizontalLayout_2">
        <item>
         <widget class="QPushButton" name="crop_btn">
+         <property name="font">
+          <font>
+           <pointsize>12</pointsize>
+          </font>
+         </property>
          <property name="text">
           <string>Crop!</string>
          </property>
