--- a/ui/color_correction.ui
+++ b/ui/color_correction.ui
@@ -65,6 +65,9 @@
          <property name="maximum">
           <number>100</number>
          </property>
+         <property name="value">
+          <number>100</number>
+         </property>
          <property name="orientation">
           <enum>Qt::Horizontal</enum>
          </property>
@@ -89,8 +92,29 @@
          <property name="maximum">
           <number>100</number>
          </property>
+         <property name="value">
+          <number>100</number>
+         </property>
          <property name="orientation">
           <enum>Qt::Horizontal</enum>
+         </property>
+        </widget>
+       </item>
+      </layout>
+     </item>
+     <item>
+      <layout class="QVBoxLayout" name="verticalLayout_6">
+       <item>
+        <widget class="QPushButton" name="preview_btn">
+         <property name="text">
+          <string>Preview</string>
+         </property>
+        </widget>
+       </item>
+       <item>
+        <widget class="QPushButton" name="apply_btn">
+         <property name="text">
+          <string>Apply!</string>
          </property>
         </widget>
        </item>
@@ -113,6 +137,9 @@
          <property name="maximum">
           <number>100</number>
          </property>
+         <property name="value">
+          <number>100</number>
+         </property>
          <property name="orientation">
           <enum>Qt::Horizontal</enum>
          </property>
@@ -133,7 +160,7 @@
         </widget>
        </item>
        <item>
-        <widget class="QSlider" name="horizontalSlider_4">
+        <widget class="QSlider" name="sharpness">
          <property name="maximum">
           <number>200</number>
          </property>
