--- a/ui/main.ui
+++ b/ui/main.ui
@@ -104,7 +104,7 @@
        <item>
         <widget class="QPushButton" name="cc_btn">
          <property name="enabled">
-          <bool>false</bool>
+          <bool>true</bool>
          </property>
          <property name="text">
           <string>Color Correction</string>
