--- a/ui/main.ui
+++ b/ui/main.ui
@@ -121,7 +121,7 @@
        <item>
         <widget class="QPushButton" name="censore_btn">
          <property name="enabled">
-          <bool>false</bool>
+          <bool>true</bool>
          </property>
          <property name="text">
           <string>Censore</string>
